# football-manager-oop-project

./: CMakeLists.txt  Club.cpp  Club.h  ClubManager.cpp  ClubManager.h  Config.h  DataManager.cpp  DataManager.h  Event.cpp  Event.h  EventManager.cpp  EventManager.h  EventObject.cpp  EventObject.h  Game.cpp  Game.h  League.cpp  League.h  Lineup.cpp  Lineup.h  Match.cpp  Match.h  Menu.cpp  Menu.h  Player.cpp  Player.h  Team.cpp  Team.h  main.cpp  readme.md
TerminalInterfaces/: GetIntegerMenuInterface.cpp  GetStringMenuInterface.cpp  OptionsMenuIDInterface.cpp  OptionsMenuInterface.cpp  OptionsMenuPlayerInterface.cpp  TerminalInterface.cpp  TerminalInterface.h
data/: countries.json  seasons.json
